don't "init" binlog if opt_bin_log is not set (bug#13791 - mysqld crashes at startup in TC_LOG_MMAP::open)